install/kubernetes/kubeflow/v1.2.0/.cache/manifests/manifests-1.2.0/katib/katib-controller/overlays/istio/katib-ui-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katib-ui
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /katib/
      rewrite:
        uri: /katib/
      route:
        - destination:
            host: katib-ui.$(katib-ui-namespace).svc.$(clusterDomain)
            port:
              number: 80
